# dms_datastore_ui

./: .gitattributes  .gitignore  AGENTS.md  D1641_STANDARDS.md  MANIFEST.in  README.md  environment.yml  home.py  pyproject.toml  repocache.py  repoui.py  run_server.sh  setup.cfg  setup.py
conda.recipe/: meta.yaml
dms_datastore_ui/: __main__.py  _version.py  cli.py  d1641_standards.py  data_screener.py  datastore_actions.py  datastore_catalog_datareference_design.md  datastore_ui.py  datastore_uimgr.py  flag_editor.py  gap_visualizer.py  map_inventory_explorer.py  readers.py
dms_datastore_ui/data/: wsihist.txt
notebooks/: test_bac_screening.py  test_data_screener.py  test_dataframe_match.ipynb  test_dataframe_slicing.ipynb  test_flag_editor.py  test_map_epawaterdata.ipynb  test_notifications.ipynb  test_read_with_flags.py  test_responsive_hvplot.ipynb  test_responsive_tabulator.ipynb  test_show_flags_with_nans.py  test_tabulator_scrollup.ipynb  test_zip.ipynb  vis_gap.py
tests/: test_caching.py  test_caching_quick.py  test_catalog_datastore.py  test_cli.py  test_d1641_standards.py  test_station_datastore_caching.py
